# charter

./: .gitignore  README.md  pyproject.toml
charter/: __init__.py  cli.py  validate.py
charter/audio/: __init__.py  adt.py  beats.py  drumsep.py  dsp.py  ingest.py  interfaces.py  pipeline.py  quantize.py  separation.py
charter/drumnote/: __init__.py  chart_writer.py  model.py  song.py  songini.py  tempo.py
charter/mapping/: __init__.py  gm_map.py  midi_loader.py  smf.py  stage6.py
charter/patterns/: __init__.py  library.py
charter/studio/: __init__.py  __main__.py  analyze.py  presets.py  sections.py  server.py  service.py
charter/studio/web/: app.js  index.html  styles.css
docs/: 01-product-vision.md  02-pipeline-architecture.md  03-chart-format-reference.md  04-source-separation.md  05-drum-transcription.md  06-beat-tempo-quantization.md  07-lane-mapping-and-difficulty.md  08-tech-stack-and-deployment.md  09-quality-risks-and-gates.md  10-mvp-roadmap.md  BEAT-DETECTION-HANDOFF.md  HANDOFF.md  README.md
tests/: test_audio_adt.py  test_audio_dsp.py  test_audio_pipeline.py  test_audio_quantize.py  test_chart_writer.py  test_roundtrip.py  test_smf.py  test_stage6.py  test_studio_analyze.py
tests/fixtures/: make_fixtures.py  synth.py
tools/validation/: package-lock.json  package.json  validate.mjs
