[project]
name = "charter"
version = "0.1.0"
description = "mp3 -> playable Clone Hero drums. Symbolic backend (Stages 6-8): GM-drum MIDI -> 4-lane Pro .chart, validated against Clone Hero's parser via scan-chart."
requires-python = ">=3.10"
# The symbolic backend has ZERO runtime dependencies (own SMF reader/writer).
# The audio frontend (Phase 3+) will add demucs / adtof / beat-this etc.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
charter = "charter.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
